# decklister

./: .gitignore  README.md  build.py  decklister.spec  example_config.json  example_twin_suns_config.json  pyproject.toml  requirements.txt  sample_deck.json  sample_twin_suns_deck.json  swudb_api.md
.github/workflows/: build.yml  main.yml  release.yml
decklister/: __main__.py  app_paths.py  background_manager.py  card_sizer.py  config.py  config_drawer.py  count_overlay.py  deck.py  deck_image_generator.py  gui.py  image_downloader.py  layout_manager.py  layout_manager_test.py  melee_csv_parser.py  renderer.py  tests.py  variant_resolver.py
